--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,37 +8,34 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/login"
-        android:layout_width="126dp"
+        android:id="@+id/btn1"
+        android:layout_width="220dp"
         android:layout_height="62dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="#FF1414"
-        android:text="@string/login"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/register"
-        app:layout_constraintHorizontal_bias="0.611"
+        android:layout_marginTop="520dp"
+        android:background="#FF0000"
+        android:text="@string/btn1"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.853" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/register"
-        android:layout_width="130dp"
-        android:layout_height="64dp"
+        android:id="@+id/btn2"
+        android:layout_width="220dp"
+        android:layout_height="62dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="8dp"
-        android:background="#51FD3E"
-        android:text="@string/register"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
+        android:layout_marginBottom="95dp"
+        android:background="#0CE70C"
+        android:text="@string/btn2"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.855" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
